@@ -537,6 +537,7 @@ from progressbar import ProgressBar
 from one2one import One2One
 from richtextbox import RichTextBox
 from dictionary import DictWidget
+from multiselection import MultiSelection
 
 
 WIDGETS_TYPE = {
@@ -567,4 +568,5 @@ WIDGETS_TYPE = {
     'one2one': (One2One, 1, False, False),
     'richtext': (RichTextBox, 1, True, True),
     'dict': (DictWidget, 1, False, False),
+    'multiselection': (MultiSelection, 1, True, True),
 }
